Fix responsiveness on small-screen laptops #1

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .board button {
-  width: 86px;
-  height: 79px;
+  width: 85px;
+  height: 75px;
   background-color: grey;
   margin: 1px 5px;
   border-radius: 50%;
@@ -15,7 +15,7 @@ body {
   margin: auto;
 }
 
-@media only screen and (min-width: 420px) {
+@media only screen and (max-width: 420px) {
   .content {
     margin: 10% auto;
   }
@@ -35,12 +35,8 @@ body {
 }
 
 @media only screen and (min-width: 1280px) {
-  .board {
-    margin-top: 2%;
-  }
   .board button {
-    width: 110px;
-    height: 97px;
+    width: 100px;
     background-color: grey;
     margin: 1px 10px;
     border-radius: 50%;
@@ -54,8 +50,8 @@ body {
   }
 
   .board button {
-    width: 140px;
-    height: 110px;
+    width: 115px;
+    height: 90px;
     background-color: grey;
     margin: 3px 10px;
     border-radius: 50%;
